src/evaluator/expression/infix/tests/snapshots/monkey_interpreter__evaluator__expression__infix__tests__test_evaluator_infix_integer_expressions_case3.snap
---
source: src/evaluator/expression/infix/tests/mod.rs
expression: "evaluator.evaluate(crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap()).unwrap())"
---
Ok(
    Integer {
        value: -5,
    },
)
